<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/AddTaskToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Criar Tarefa"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtfd_titulo"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskToolBar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#202963"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtfd_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/data"
        android:layout_marginEnd="4dp"
        app:startIconDrawable="@drawable/ic_todo_calendar_24"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/txtfd_hora"
        app:layout_constraintTop_toBottomOf="@+id/txtfd_titulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textColorHint="#757575"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtfd_hora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hora"
        android:layout_marginStart="4dp"
        app:startIconDrawable="@drawable/ic_todo_time_24"
        app:layout_constraintStart_toEndOf="@id/txtfd_data"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/txtfd_titulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintBottom_toTopOf="@+id/btn_criar_tarefa"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_criar_tarefa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/criar_tarefa"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>